second container completed

--- a/index.html
+++ b/index.html
@@ -33,19 +33,32 @@
         </div>
         <div class="secondContainer">
             <div class="secondContainerItem">
-                <img src="" alt="">
+                <img src="assets/images/Group_1.svg" alt="">
+                <h4>Free Shipping</h4>
+                <p>Last Chance! Free shipping on all <br> orders ends today.</p>
             </div>
             <div class="secondContainerItem">
-                <img src="" alt="">
+                <img src="assets/images/Group_2.svg" alt="">
+                <h4>Quick Packaging</h4>
+                <p>Last Chance! Free shipping on all <br> orders ends today.</p>
             </div>
             <div class="secondContainerItem">
-                <img src="" alt="">
+                <img src="assets/images/Group_3.svg" alt="">
+                <h4>100% Money Back</h4>
+                <p>Last Chance! Free shipping on all <br> orders ends today.</p>
             </div>
             <div class="secondContainerItem">
-                <img src="" alt="">
+                <img src="assets/images/Group_4.svg" alt="">
+                <h4>Fast Delivery</h4>
+                <p>Last Chance! Free shipping on all <br> orders ends today.</p>
             </div>
         </div>
-
+        <div class="thirdContainer">
+            <h2>Brown Sugar <br> Oatmea</h2>
+            <p>Together with McDonald’s, Burger King has grown to become synonymous with burgers in the US.Together with
+                McDonald’s, Burger King has grown to become synonymous.</p>
+            <button><a href="">See Details</a></button>
+        </div>
     </main>
 </body>
 
