Completed third container

--- a/index.html
+++ b/index.html
@@ -55,9 +55,80 @@
         </div>
         <div class="thirdContainer">
             <h2>Brown Sugar <br> Oatmea</h2>
-            <p>Together with McDonald’s, Burger King has grown to become synonymous with burgers in the US.Together with
-                McDonald’s, Burger King has grown to become synonymous.</p>
+            <p>Together with McDonald’s, Burger King has grown to become <br> synonymous with burgers in the US.Together
+                with
+                McDonald’s, <br> Burger King has grown to become synonymous.</p>
             <button><a href="">See Details</a></button>
+        </div>
+        <div class="fourthContainer">
+            <span class="fourthContainerHeading">Our Product</span>
+            <div class="fourthSelectContainer">
+                <a href="#">ICE CREAM</a>
+                <a href="">CAYENNE CHOCOLATE</a>
+                <a href="">CAKE BATTER</a>
+                <a href="">CANDY CANE</a>
+                <a href="">PLATTERS</a>
+                <a href="">DESSERT</a>
+            </div>
+            <div class="fourthItemContainer">
+                <img src="assets/images/Rectangle_74.png" alt="">
+                <div class="fourthItemTextContainer">
+                    <h4>Brown bread</h4>
+                    <p>Bon Au Pain is a pioneer in the healthy fast food scene.Bon Au Pain is a pioneer in the
+                        healthy
+                        fast food scene.Bon Au Pain is a pioneer in the healthy fast food scene.</p>
+                    <div class="priceH6Container">
+                        <span>$19.55</span>
+                        <p>$22.55</p>
+                    </div>
+                    <button><a href="">Buy Now</a></button>
+                </div>
+            </div>
+            <div class="fourthItemContainer">
+                <img src="assets/images/Rectangle_78.png" alt="">
+                <div class="fourthItemTextContainer">
+                    <h4>Cayenne chocolate</h4>
+                    <p>Bon Au Pain is a pioneer in the healthy fast food scene.Bon Au Pain is a pioneer in the healthy
+                        fast food scene.Bon Au Pain is a pioneer in the healthy fast food scene.</p>
+                    <div class="priceH6Container">
+                        <span>$19.55</span>
+                        <p>$22.55</p>
+                    </div>
+                    <button><a href="">Buy Now</a></button>
+                </div>
+            </div>
+            <div class="fourthItemContainer">
+                <img src="assets/images/Rectangle_79.png" alt="">
+                <div class="fourthItemTextContainer">
+                    <h4>Sweet corn</h4>
+                    <p>Bon Au Pain is a pioneer in the healthy fast food scene.Bon Au Pain is a pioneer in the healthy
+                        fast food scene.Bon Au Pain is a pioneer in the healthy fast food scene.</p>
+                    <div class="priceH6Container">
+                        <span>$19.55</span>
+                        <p>$22.55</p>
+                    </div>
+                    <button><a href="">Buy Now</a></button>
+                </div>
+            </div>
+            <div class="fourthItemContainer">
+                <img src="assets/images/Rectangle 824.png" alt="">
+                <div class="fourthReviewContainer">
+                    <div class="fourthContainerAvatar">
+                        <img src="assets/images/Ellipse-21.png" alt="">
+                        <div>
+                            <span>Adele A. McNeill</span>
+                            <p>AMIRICAN</p>
+                        </div>
+                    </div>
+                    <div class="fourthReviewTextContainer">
+                        <blockquote>
+                            <span>Thanks a lot for the prompt service. Really appreciate. Excellence taste in Every
+                                Bite.Add
+                                a joy of best Taste. Foodie Moments.</span>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
