--- a/index.html
+++ b/index.html
@@ -127,10 +127,98 @@
                                 a joy of best Taste. Foodie Moments.</span>
                         </blockquote>
                     </div>
+                    <div class="fourthCarouselContainer">
+                        <img src="assets/images/right-arrow_2.svg" alt="">
+                        <div>
+                            <img src="assets/images/pCOsR8NMM5_1.png" alt="">
+                            <img src="assets/images/Ellipse_21_1_.png" alt="">
+                            <img src="assets/images/W2pqg4SchC_1.png" alt="">
+                        </div>
+                        <img src="assets/images/right-arrow_1.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="fifthContainer">
+            <img src="assets/images/Mask_Group.png" alt="">
+            <div class="fifthTextContainer">
+                <span>Simple Way To Order Your Food</span>
+                <p>Some food has looked so awful that it's looked like something that the dog's brought home, yet after
+                    one mouthful I've been left eating my thoughts.</p>
+                <ul>
+                    <li>
+                        <div><img class="fifthIcons" src="assets/images/Group_91.svg" alt=""></div>Select Your Food
+                    </li>
+                    <li>
+                        <div><img class="fifthIcons" src="assets/images/add-to-cart_1.svg" alt=""></div>Add To Cart
+                    </li>
+                    <li>
+                        <div><img class="fifthIcons" src="assets/images/Group_4_.svg" alt=""></div>Order Your Food
+                    </li>
+                </ul>
+                <div class="fifthContainerLinks">
+                    <a href="#"><img src="assets/images/en_badge_web_generic-removebg-preview_1.png" alt=""></a>
+                    <a href="#"><img
+                            src="assets/images/logo-app-store-brand-font-png-favpng-Gb5FcTZcrb9bRikX49s26mMVn-removebg-preview_1.png"
+                            alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="sixthContainer">
+            <form action="">
+                <label id="sixthHeading" for="question">Have Question in Mind? <br> Let us help you</label>
+                <div>
+                    <input type="text" id="question" name="askquestion" placeholder="Enter your question">
+                    <input id="submit" type="submit" value="Send">
+                </div>
+            </form>
+        </div>
     </main>
+    <footer>
+        <img class="footerLogo" src="assets/images/PolarHeaderLogo.png" alt="">
+        <div class="footerItems">
+            <div class="footerItem">
+                <span>Some food has looked so awful that <br> it's looked like something that the <br> dog's brought
+                    home.</span>
+                <p>Follow Us</p>
+                <ul>
+                    <li><a href=""><img src="assets/images/facebook_1.svg" alt=""></a></li>
+                    <li><a href=""><img src="assets/images/twitter_1.svg" alt=""></a></li>
+                    <li><a href=""><img src="assets/images/instagram_1.svg" alt=""></a></li>
+                    <li><a href=""><img src="assets/images/linkedin_1.svg" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="footerItem">
+                <a href="#">Home</a>
+                <a href="#">Product</a>
+                <a href="#">Blog</a>
+                <a href="#">Pricing</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="footerItem">
+                <a href="#">Delivery Information</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms & Condition</a>
+                <a href="#">Search Terms</a>
+                <a href="#">Order & Return</a>
+            </div>
+            <div class="footerItem">
+                <form action="">
+                    <label for="email">Newsletter</label>
+                    <div>
+                        <input type="email" placeholder="Your Email" id="email">
+                        <input type="submit" name="submit" id="submitFooter" value="Submit">
+                    </div>
+                </form>
+                <ul>
+                    <li><a href=""><img src="assets/images/Group_118.svg" alt=""></a></li>
+                    <li><a href=""><img src="assets/images/Group_117.svg" alt=""></a></li>
+                    <li><a href=""><img src="assets/images/Group_6_.svg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
